--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,10 @@
     "@types/react-dom": "^17.0.3",
     "axios": "^0.21.4",
     "classnames": "^2.3.1",
+    "moment": "^2.29.3",
     "react": "^17.0.2",
+    "react-big-calendar": "^0.40.1",
+    "react-calendar": "^3.7.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -49,6 +52,8 @@
   },
   "devDependencies": {
     "@mate-academy/eslint-config-react-typescript": "^0.0.4",
+    "@types/react-big-calendar": "^0.38.0",
+    "@types/react-calendar": "^3.5.0",
     "@types/react-router-dom": "^5.3.3",
     "eslint": "^7.25.0",
     "gh-pages": "^3.1.0",
