--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.20.10",
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
+    "antd": "^4.20.4",
     "axios": "^0.21.4",
     "classnames": "^2.3.1",
     "moment": "^2.29.3",
@@ -21,6 +22,7 @@
     "react-scripts": "4.0.3",
     "typescript": "^4.2.4",
     "typescript-eslint-parser": "^22.0.0",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
